--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "katex": "^0.11.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-katex": "^0.4.0"
+    "vue-katex": "^0.4.0",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
