--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.4",
     "katex": "^0.11.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-katex": "^0.4.0",
-    "vue-router": "^3.3.4"
+    "vue-router": "^3.3.4",
+    "vuedraggable": "^2.24.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
