--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-katex": "^0.4.0",
-    "vue-router": "^3.3.4",
-    "vuedraggable": "^2.24.0"
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
